--- a/lib/index.html
+++ b/lib/index.html
@@ -9,11 +9,10 @@
 <meta name="Description" content="作者信息" />
 <link rel="stylesheet" type="text/css" href="css/base.min.css" />
 <link rel="stylesheet" type="text/css" href="css/index.min.css" />
-<title>泊安飞</title>
+<title>gulp-webpack-Example</title>
 </head>
 <body>
 <div class="ui-head">
-    <h1><img src="images/logo.jpg" width="90" /></h1>
     <div class="ui-menu" id="ui_menu_icon"><i class="ui-menu-icon"></i></div>
     <ul class="ui-menu-list" id="ui_menu_list">
         <li><a href="./index.html" class="active">首页</a></li>
@@ -25,7 +24,7 @@
 <div class="ui-index-content">
     <div class="ui-index-item">
         <img src="images/icon-01.jpg" width="100%" />
-        <p>为往返机场的自驾人群提供全方位服务，泊安飞不只有泊车。</p>
+        <p>为往返机场的自驾人群提供全方位服务，不只有泊车。</p>
         <a href="#">了解更多</a>
     </div>
     <div class="ui-index-item">
@@ -35,11 +34,11 @@
     </div>
     <div class="ui-index-item">
         <img src="images/icon-03.jpg" width="100%" />
-        <p>把爱车交给泊安飞，您只管愉悦出行。泊安心，飞安心。 </p>
+        <p>把爱车交给，您只管愉悦出行。泊安心，飞安心。 </p>
         <a href="#">了解更多</a>
     </div>
 </div>
-<div class="ui-footer">版权所有&nbsp;&copy;&nbsp;2015<br/>北京泊安飞科技有限公司&nbsp;&nbsp;京ICP备15042763号</div>
+<div class="ui-footer">2015<br/>北京有限公司</div>
 <script type="text/javascript" src="js/main.min.js"></script>
 </body>
 </html>
